--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 2,
     "name": "Chang is in the Air",
     "version": "0.1",
+    "permissions": ["activeTab"],
     "content_scripts": [
         {
             "matches": [
