--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,15 @@
     "manifest_version": 2,
     "name": "Chang is in the Air",
     "version": "0.1",
-    "permissions": ["activeTab"],
+    "permissions" : [
+        "activeTab"
+    ],
     "content_scripts": [
         {
             "matches": [
                 "<all_urls>"
             ],
-            "js": ["jquery.js","content.js"]
+            "js": ["content.js"]
         }
     ],
     "browser_action": {
